testsuite/tests/type-data/should_fail/TDPunning.hs
{-# LANGUAGE TypeData #-}
module TDPunning where

type data T = T -- type T is multiply defined
