testsuite/tests/type-data/should_fail/TDPunning.stderr
TDPunning.hs:4:1: error: [GHC-29916] Multiple declarations of ‘T’
    At: TDPunning.hs:4:1-15
        TDPunning.hs:4:15

